--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
 
 <header class="navbar">
   <h1>🎬 VideoFlix</h1>
+
   <input
     id="search"
     type="text"
     placeholder="Search movies or series..."
     oninput="searchVideos()"
   >
+
+  <a href="/series-generator/" target="_blank" class="generator-link">
+    ➕ Series Generator
+  </a>
 </header>
+
 
 <div id="content"></div>
 
@@ -39,3 +45,4 @@
 <script src="js/app.js"></script>
 </body>
 </html>
+
